[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticassure-workspace"
version = "0.1.0"
description = "Monorepo workspace for AgenticAssure SDK"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["core/src", "pro/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["core/tests", "pro/tests"]
addopts = "-v --tb=short"
